Adding PROCFILE, REQS.TXT,Favicon

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-        <div class=Jumbotron>
-                <h3>Welcome to the About Page</h3>
-                <p>This is the content on the about page as Jumbotron</p>
+        <div class="container">
+                <div class="jumbotron">
+                        <h3 class="display-4" align="center">Jumbo heading</h3>
+                        <p class="lead">Jumbo helper text</p>
+                        <hr class="my-2">
+                        <p>More info</p>
+                        <p class="lead">
+                                <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
+                        </p>
+                </div>
         </div>
 {% endblock %}
