--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../static/favicon.ico">
     <link rel="stylesheet" href="../static/css/custom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -27,7 +28,7 @@
               <a class="nav-link" href="{{url_for("about")}}">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/veeravignesh1/Review-Ranker">Github</a>
+                <a class="nav-link" href="https://github.com/veeravignesh1/Reviews-Ranker">Github</a>
                   </a>
               </li>
         </div>
