--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,26 @@
 {% extends "layout.html" %}
 {% block content %}
-       <div class="container">
-               <div class="row justify-content-center">
-                        <h1>Read What Matters</h1>
-               </div>
-       </div>
-       <div class="containter">
-               <div class="row " style="padding: 10px;">
-                        <div class="col-md-2 justify-content-around">
-                                <div class="form-group ">
-                                <label for="flipkart_url" class=""><h4>URL</h4></label>
+<div class="url">
+       <form action="">
+               <div class="form-group">
+                        <div class="row justify-content-center">
+                                <div class="col-md-1">
+                                        <label for="userurl"><h3>URL:</h3></label>
+                                </div>
+                                <div class="col-md-6">
+                                        <input type="url" name="userurl" id="userurl" class="form-control" aria-describedby="urlhelp">
+                                        <small id="urlhelp" class="form-text text-muted">Pass in a Flipkart Product URL</small>
                                 </div>
                         </div>
-                        <div class="col-md-9">
-                          <input type="text"
-                            class="form-control" name="URL" id="flipkart_url" aria-describedby="helpId" placeholder="URL">
-                          <small id="helpId" class="form-text text-muted">Enter a Flipkart product URL</small>
+                </div>
+                <div class="form-group">
+                        <div class="row justify-content-center">
+                                <!-- Submit Button -->
+                                <button type="button" class="btn btn-primary">Submit</button>
                         </div>
-               </div>
-       </div>   
+                </div>
+        </form>
+</div>
+{% block table %}{% endblock %}
+
 {% endblock %}
