--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,25 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="url">
-       <form action="">
-               <div class="form-group">
+<div class="url" style="padding-top: 50px;">
+        <form action="{{url_for('result')}}">
+                <div class="form-group">
                         <div class="row justify-content-center">
-                                <div class="col-md-1">
-                                        <label for="userurl"><h3>URL:</h3></label>
+                                <div class="col-md-1 align-self-md-baseline">
+                                        <label for="userurl"><strong>URL</strong></label>
                                 </div>
                                 <div class="col-md-6">
-                                        <input type="url" name="userurl" id="userurl" class="form-control" aria-describedby="urlhelp">
-                                        <small id="urlhelp" class="form-text text-muted">Pass in a Flipkart Product URL</small>
+                                        <input type="url" name="userurl" id="userurl" class="form-control"
+                                                aria-describedby="urlhelp" placeholder="URL">
+                                        <small id="urlhelp" class="form-text text-muted">Pass in a Flipkart Product
+                                                URL</small>
                                 </div>
                         </div>
                 </div>
                 <div class="form-group">
                         <div class="row justify-content-center">
                                 <!-- Submit Button -->
-                                <button type="button" class="btn btn-primary">Submit</button>
+                                <!-- <button type="button" class="btn btn-primary">Submit</button> -->
+                                <input type="submit" class="btn btn-primary" value=Submit>
                         </div>
                 </div>
         </form>
