--- a/templates/result.html
+++ b/templates/result.html
@@ -2,15 +2,19 @@
 
 {% block table %}
     <div class="row">
-        <div class="col">
-            <div class="positive">
+        <div class="col-md-6">
+            <h3>Positive</h3>
+            <div class="positive" style="background-color: #e6ffe6;">
                 {{ positive |safe }}
             </div>
         </div>
-        <div class="col">
-            <div class="positive">
+        <div class="col-md-6">
+            <h3>Negative</h3>
+            <div class="negative" style="background-color: #ffebe6;">
                 {{ negative |safe }}
             </div>
         </div>
     </div>
 {% endblock %}
+
+
