--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
         <form action="{{url_for('result')}}">
                 <div class="form-group">
                         <div class="row justify-content-center">
-                                <div class="col-md-1 align-self-md-baseline">
-                                        <label for="userurl"><strong>URL</strong></label>
+                                <div class="col align-self-center  col-md-1">
+                                        <label class="align-bottom" for="userurl"><strong style="align-items: center;">URL</strong></label>
                                 </div>
                                 <div class="col-md-6">
                                         <input type="url" name="userurl" id="userurl" class="form-control"
