Changes to Features and Adding form control at home

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
                                 </div>
                                 <div class="col-md-6">
                                         <input type="url" name="userurl" id="userurl" class="form-control"
-                                                aria-describedby="urlhelp" placeholder="URL">
+                                                aria-describedby="urlhelp" placeholder="URL" required>
                                         <small id="urlhelp" class="form-text text-muted">Pass in a Flipkart Product
                                                 URL</small>
                                 </div>
